// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`行动牌快照回归 · 21 卡 > 1. playShoot · 同层目标，骰 1 → 杀死并入迷失层 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_shoot",
  ],
  "layers": {
    "0": {
      "heartLockValue": undefined,
      "layer": undefined,
      "nightmareId": undefined,
      "nightmareRevealed": undefined,
      "playersInLayer": [
        "p2",
      ],
    },
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 1,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 0,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": false,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 2. playShootDreamTransit · mode=shoot · 骰 3 → 移动 target 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_shoot_dream_transit",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p2",
      ],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 2,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 3. playShootDreamTransit · mode=transit · 自己移到相邻层 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_shoot_dream_transit",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
      ],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 2,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 4. playShootKing · 跨层 · 骰 1 → target 死亡 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_shoot_king",
  ],
  "layers": {
    "0": {
      "heartLockValue": undefined,
      "layer": undefined,
      "nightmareId": undefined,
      "nightmareRevealed": undefined,
      "playersInLayer": [
        "p2",
      ],
    },
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 1,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 0,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": false,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 5. playShootArmor · 骰 4 → target 移层 + 弃所有解封 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_shoot_armor",
    "action_unlock",
    "action_unlock",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p2",
      ],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 2,
      "faction": "thief",
      "hand": [
        "action_kick",
      ],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 6. playShootBurst · 骰 5 → target 移层 + 弃所有 SHOOT 类 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_shoot_burst",
    "action_shoot",
    "action_shoot_king",
    "action_shoot_armor",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p2",
      ],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 2,
      "faction": "thief",
      "hand": [
        "action_unlock",
      ],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 7. playUnlock · 盗梦者同层心锁 → 进入 pendingUnlock 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_unlock",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 0,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": {
    "onTimeout": "resolve",
    "parentWindow": null,
    "responded": [],
    "responders": [
      "p2",
      "pM",
    ],
    "sourceAbilityID": "action_unlock_effect_1",
    "sourceType": "unlock",
    "timeoutMs": 30000,
    "validResponseAbilityIDs": [
      "action_unlock_effect_2",
    ],
  },
  "pendingUnlock": {
    "cardId": "action_unlock",
    "layer": 1,
    "playerID": "p1",
  },
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 8. playDreamTransit · 自己 1→2 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_dream_transit",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
      ],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 2,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 9. playKick · p1(L1) ↔ p2(L3) 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_kick",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "pM",
        "p2",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
      ],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 3,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 10. playTelekinesis · p2 拉到 p1(L1) 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_telekinesis",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "pM",
        "p2",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 11. playPeek · 窥视层 1（贿赂池空 → 直接挂 peekReveal） 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_dream_peek",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 0,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 12. playGraft · phase1 → 抽 3 + pendingGraft 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 17,
  "discardPile": [
    "action_graft",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": {
    "playerID": "p1",
  },
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [
        "action_unlock",
        "action_unlock",
        "action_unlock",
      ],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 13. playGravity · 单目标 p2，进入 pendingGravity 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_gravity",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": {
    "bonderPlayerID": "p1",
    "pickCursor": 0,
    "pickOrder": [
      "p1",
      "p2",
    ],
    "pool": [
      "action_kick",
      "action_unlock",
    ],
    "targetIds": [
      "p2",
    ],
  },
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 14. playResonance · p1 拿 p2 全部手牌 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_resonance",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": {
    "bonderPlayerID": "p1",
    "targetPlayerID": "p2",
  },
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [
        "action_kick",
        "action_unlock",
      ],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 15. playTimeStorm · 牌库顶 10 张 + 本牌移出游戏 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 10,
  "discardPile": [],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [
    "action_time_storm",
    "action_unlock",
    "action_unlock",
    "action_unlock",
    "action_unlock",
    "action_unlock",
    "action_unlock",
    "action_unlock",
    "action_unlock",
    "action_unlock",
    "action_unlock",
  ],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 16. playCreation · 抽 2 张 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 18,
  "discardPile": [
    "action_creation",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [
        "action_unlock",
        "action_unlock",
      ],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 17. playShift · p1 ↔ p2 角色互换 + shiftSnapshot 快照 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_shift",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": {
    "p1": "thief_p1",
    "p2": "thief_p2",
    "pM": "dm_fortress",
  },
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 18. playNightmareUnlock · 翻开层 2 梦魇 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_nightmare_unlock",
  ],
  "layers": {
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "p2",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": "nightmare_starfall",
      "nightmareRevealed": true,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p1",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 19. 死亡宣言·3 + playShoot · 骰 3 → 扩面命中死亡 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_shoot",
  ],
  "layers": {
    "0": {
      "heartLockValue": undefined,
      "layer": undefined,
      "nightmareId": undefined,
      "nightmareRevealed": undefined,
      "playersInLayer": [
        "p2",
      ],
    },
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [
        "action_death_decree_3",
      ],
      "id": "p1",
      "isAlive": true,
      "shootCount": 1,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 0,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": false,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 20. 死亡宣言·4 + playShoot · 骰 4 → 扩面命中死亡 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_shoot",
  ],
  "layers": {
    "0": {
      "heartLockValue": undefined,
      "layer": undefined,
      "nightmareId": undefined,
      "nightmareRevealed": undefined,
      "playersInLayer": [
        "p2",
      ],
    },
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [
        "action_death_decree_4",
      ],
      "id": "p1",
      "isAlive": true,
      "shootCount": 1,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 0,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": false,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;

exports[`行动牌快照回归 · 21 卡 > 21. 死亡宣言·5 + playShoot · 骰 5 → 扩面命中死亡 1`] = `
{
  "currentPlayerID": "p1",
  "deckSize": 20,
  "discardPile": [
    "action_shoot",
  ],
  "layers": {
    "0": {
      "heartLockValue": undefined,
      "layer": undefined,
      "nightmareId": undefined,
      "nightmareRevealed": undefined,
      "playersInLayer": [
        "p2",
      ],
    },
    "1": {
      "heartLockValue": 5,
      "layer": 1,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [
        "p1",
        "pM",
      ],
    },
    "2": {
      "heartLockValue": 4,
      "layer": 2,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "3": {
      "heartLockValue": 3,
      "layer": 3,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
    "4": {
      "heartLockValue": 2,
      "layer": 4,
      "nightmareId": null,
      "nightmareRevealed": false,
      "playersInLayer": [],
    },
  },
  "moveCounter": 1,
  "pendingGraft": null,
  "pendingGravity": null,
  "pendingResonance": null,
  "pendingResponseWindow": null,
  "pendingUnlock": null,
  "players": {
    "p1": {
      "bribeReceived": 0,
      "characterId": "thief_p1",
      "currentLayer": 1,
      "faction": "thief",
      "hand": [
        "action_death_decree_5",
      ],
      "id": "p1",
      "isAlive": true,
      "shootCount": 1,
      "unlockCount": 0,
    },
    "p2": {
      "bribeReceived": 0,
      "characterId": "thief_p2",
      "currentLayer": 0,
      "faction": "thief",
      "hand": [],
      "id": "p2",
      "isAlive": false,
      "shootCount": 0,
      "unlockCount": 0,
    },
    "pM": {
      "bribeReceived": 0,
      "characterId": "dm_fortress",
      "currentLayer": 1,
      "faction": "master",
      "hand": [],
      "id": "pM",
      "isAlive": true,
      "shootCount": 0,
      "unlockCount": 0,
    },
  },
  "removedFromGame": [],
  "shiftSnapshot": null,
  "turnPhase": "action",
  "unlockThisTurn": 0,
}
`;
